# python-information-flow

./: .gitignore  LICENSE  README.md  inf_flow_types.py  main.py  pyproject.toml  solve-mod.py  solve.py
pif/runtime/: analyzer.py  security_exception.py  security_monitor.py
pif/src/pif/: pif.py
pif/src/pif/runtime/: analyzer.py  security_monitor.py
pif/src/pif/types/: secure_bool.py  secure_num.py  secure_string.py  secure_type.py
pif/tests/examples/: solve.py
pif/types/: secure_bool.py  secure_num.py  secure_string.py
src/pif/: __init__.py  pif.py
src/pif/runtime/: analyzer.py  security_monitor.py
src/pif/stypes/: secure_bool.py  secure_num.py  secure_string.py  secure_type.py
test/examples/: solve.py
tests/: helpers.py  test_assignment.py  test_if.py  test_secure_bool.py  test_secure_num.py  test_secure_string.py  test_while.py
tests/examples/: assignment_1.py  if_1.py  if_10.py  if_2.py  if_3.py  if_4.py  if_5.py  if_6.py  if_7.py  if_8.py  if_9.py  solve.py  temp.py  while_1.py  while_2.py  while_3.py  while_4.py  while_5.py  while_6.py
